--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section>
-      <h1>Lorem ipsum dolor sit amet.</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
+    <!-- Header -->
     <load ="partials/vite-promo.html" />
+
+    <main>
+      <!-- Hero -->
+      <!-- <load ="" /> -->
+      <!-- Customers -->
+      <!-- <load ="" /> -->
+      <!-- Gallery -->
+      <!-- <load ="" /> -->
+    </main>
+    <!-- Footer -->
+    <!-- <load ="" /> -->
 
     <script type="module" src="/main.js"></script>
   </body>
