--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Header -->
-    <load ="partials/vite-promo.html" />
+    <load ="partials/header.html" />
 
     <main>
       <!-- Hero -->
