--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,11 @@
 
     <main>
       <!-- Hero -->
-      <!-- <load ="" /> -->
+
       <!-- Customers -->
-      <!-- <load ="" /> -->
-      <!-- Gallery -->
-      <!-- <load ="" /> -->
+      <load ="partials/customers.html" />
     </main>
     <!-- Footer -->
-    <!-- <load ="" /> -->
 
     <script type="module" src="/main.js"></script>
   </body>
